Sun Apr 13 18:13:28 1997  Andrew Scherpbier  <turtle@kiwi>

	* htlib/strcasecmp.cc (mystrncasecmp): Fixed it.  Only one string
	was converted to lower case.

	* htlib/URL.cc (parse): Added extra check so that a colon is only
	recognized if it comes right after the machine name.  It used to
	just look for a colon anywhere in the path.  This broke some bogus
	URLs.

Wed Jan 15 21:42:36 1997  Andrew Scherpbier  <turtle@kiwi>

	* htdig/HTML.cc (do_tag): Applied patch by William Miller that
	will fix a problem with the <base> tag.

Sun Jan 12 20:34:50 1997  Andrew Scherpbier  <turtle@kiwi>

	* htlib/URL.cc (URL): Implemented David Filiatrault's suggestion
	when dealing with anchors in URLs.  Anchors are now removed
	without affecting anything after the anchor (like CGI parameters).

	* config.html: Finally completed this file.  It now describes the
	basic files needed to run the search engine.

	* attrs.html: Fixed some problems pointed out by Darren Maglidt.
	Missing attribute documentation for keywords_meta_tag_names was
	added.

	* htsearch/Display.cc (setVariables): Applied patch by Sander van
	Zoest which fixed a problem with the use of the method_names
	attribute.  The docs say that individual parts can be quoted while
	the code didn't allow it.

Sat Dec 14 09:21:25 1996  Andrew Scherpbier  <turtle@kiwi>

	* htdig/Plaintext.cc (parse): Applied patch by "Miller, William G"
	<William.Miller@unisys.com> to fix a problem in the PlainText
	parser of htdig.  Before, if the plaintext parser was called, it
	used its contents literally.  Now it replaces '<', '>', and '&'
	with the corresponsing SGML entities.  Now, when htsearch displays
	the excerpt for a match, it will actually show these symbols.

	* htlib/Dictionary.cc (Get_Next): Applied patch by "Miller,
	William G" <William.Miller@unisys.com> to fix the Dictionary
	class.  The Start_Get() and Get_Next() dictionary traversal
	routines were severely broken.  Thanks William!
