@@ -78,6 +78,8 @@
 	<a target="body" href="attrs.html#excerpt_show_top">excerpt_show_top</a><br>
 	<img src="dot.gif">
 	<a target="body" href="attrs.html#exclude_urls">exclude_urls</a><br>
+	<img src="dot.gif">
+	<a target="body" href="attrs.html#external_parsers">external_parsers</a><br>
 
       </font><br>
       <b>H</b>
