@@ -41,6 +41,8 @@
 	<img src="dot.gif">
 	<a target="body" href="attrs.html#exclude_urls">exclude_urls</a><br>
 	<img src="dot.gif">
+	<a target="body" href="attrs.html#external_parsers">external_parsers</a><br>
+	<img src="dot.gif">
 	<a target="body" href="attrs.html#heading_factor">heading_factor_1</a><br>
 	<img src="dot.gif">
 	<a target="body" href="attrs.html#heading_factor">heading_factor_2</a><br>
