@@ -1,3 +1,8 @@
+Sun Oct 12 19:11:10 1997  Andrew Scherpbier  <turtle@dt3h1nd3.san.rr.com>
+
+	* attrs.html: Added documentation for the external_parsers
+	attribute.
+
 Sun Apr 13 18:13:28 1997  Andrew Scherpbier  <turtle@kiwi>
 
 	* htlib/strcasecmp.cc (mystrncasecmp): Fixed it.  Only one string
